<?xml version="1.0"?>
<package format="2">
  <name>bender</name>
  <version>1.0.0</version>
  <description>The bender package</description>

  <maintainer email="matthewoberg@u.boisestate.edu">Matthew Oberg</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
